--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
+.bigCounter {
+    text-align: center;
+    background-color: black;
+    color: aliceblue;
+    padding: 20px;
+    font-size: 60px;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.bigCounter div {
+    display: inline-block;
+    line-height: 60px;
+    margin: 3px;
+}
